fixed product preview responsiveness issue on mobile devices

--- a/src/pages/SingleProduct/SingleProduct.css
+++ b/src/pages/SingleProduct/SingleProduct.css
@@ -13,6 +13,11 @@ a {
   padding: 25px;
 }
 
+.main-img {
+  width: 500px;
+  height: auto;
+}
+
 .small-img {
   cursor: pointer;
   margin: 10px;
